syntax = "proto3";
package coolcar;

option go_package="coolcar/server/proto/gen/go;trippb";

// 枚举类型
enum TripStatus{
    TS_NOT_SPECIFIED = 0;
    NOT_STARTED = 1;
    IN_PROGRESS = 2;
    FINISHED = 3;
    PAID = 4;
}

message Location{
    double latitude = 1;
    double longitude = 2;
}

// 定义数据格式
message Trip{
    string start = 1; // 1:第一个字段
    string end = 2; // 2:第二个字段
    int32 duration_sec = 3; //第3个字段 sec 单位，秒
    int32 fee_cent = 4; // cent 单位， 分

    Location start_pos = 5;
    Location end_pos = 6;
    repeated Location path_locationns = 7;
    TripStatus status = 8;    
}

message GetTripRequest{
    string id = 1;
}

message GetTripResponse{
    string id = 1;
    Trip trip = 2;
}

// 定义通信层service
service TripService{
    rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}

